# design_patters_implementations

Blog post management/: pyproject.toml
Blog post management/src/: client.py
Blog post management/src/logger/: logger.py
Blog post management/src/schema/: post_manager.py  post_schema.py
Blog post management/tests/: conftest.py  test_lsp.py  test_ocp.py
Characters cloning/: application.py
Characters cloning/src/: schema.py
Http Request Builder/: application.py  schema.py
Multi Database Connection/: DatabaseConnection.py  DatabaseFactory.py  application.py  docker-compose.yml  pyproject.toml
creational/Blog post management/: .pre-commit-config.yaml
creational/Blog post management/src/schema/: output_schema.py  validation.py
creational/Blog post management/tests/: conftest.py  test_dip.py
creational/Characters cloning/: pyproject.toml
creational/Http Request Builder/: mock_server.py  pyproject.toml
creational/Multi Database Connection/: DatabaseConnection.py  DatabaseFactory.py  pyproject.toml
structural_patterns/decorator_logger/: pyproject.toml  t.py
structural_patterns/payment_gateway_adapter/: adaptee.py  adapter.py  application.py  pyproject.toml  target_class.py
