[project]
name = "blog-post-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "locust>=2.43.1",
    "pytest>=9.0.2",
]

[tool.setuptools]
packages = ["src"]

[tool.uv]
package = true

[project.scripts]
my-server = "src.main:run_server"
